    -----------------------------------------------------------
This file should be used  to briefly summarize all major modifications 
introduced in the code and keeptrack of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

15-Oct-2014, Gabriele Cosmo             (phys-ctor-hinelastic-V10-00-05)
- Added dependency to 'de_excitation/fission' module in GNUMakefile
  and sources.cmake, now required by INCLXX.

05-Aug-2014, Krzysztof Genser           (phys-ctor-hinelastic-V10-00-04)
- Extended Shielding code to also include ShieldingM variant

28-June-2014, Michael Kelsey            (phys-ctor-hinelastic-V10-00-03)
- Add "if (!tpdata) return;" to all dtors, to avoid segfaults.

03-June-2014, Julia Yarba               (phys-ctor-hinelastic-V10-00-02)
- Include ctor's for NuBeam and Shielding

27-May-2014, Davide Mancusi             (phys-ctor-hinelastic-V10-00-01)
- Modify switching energies and models in HadronPhysicsINCLXX.

29-Jan-2014, Gunter Folger              (phys-ctor-hinelastic-V10-00-00)
- Removed from photolepton_hadron/muon_nuclear from sources.cmake

14-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-20)
- Use G4NeutronInelasticXS for neutrons in the following physics lists
  (besides QBBC and FTFP_BERT_TRV which already use it):
  FTFP_BERT, FTF_BIC, QGSP_FTFP_BERT, QGSP_BERT, QGSP_BIC, QGS_BIC.

08-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-19)
- Removed low_energy and added fission to sources.cmake and GNUmakefile.

07-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-18)
- Removed low_energy and high_energy from sources.cmake and GNUmakefile.

24-Sep-2013, Davide Mancusi             (phys-ctor-hinelastic-V09-06-17)
- Fix a possible null-pointer dereference in HadronPhysicsINCLXX.
