@@ -14,6 +14,13 @@ introduced in the code and keeptrack of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+30-Oct-2014, Andrea Dotti               (phys-ctor-hinelastic-V10-00-07)
+- Fix in destructor of G4VHadronPhysics to check validity of pointer. 
+
+30-Oct-2014, Julia Yarba                (phys-ctor-hinelastic-V10-00-06)
+- In G4HadronPhysicsNuBeam, adjust bertini-ftf overlap from 7-10GeV to 3-3.5GeV
+  (based on stat. study, it's better for light targets)
+
 15-Oct-2014, Gabriele Cosmo             (phys-ctor-hinelastic-V10-00-05)
 - Added dependency to 'de_excitation/fission' module in GNUMakefile
   and sources.cmake, now required by INCLXX.
